--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-responsive-carousel": "^3.1.33",
     "react-router-dom": "^4.2.2",
+    "react-window-resize-listener": "^1.1.0",
     "redux": "^3.7.2"
   },
   "devDependencies": {
