--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-responsive-carousel": "^3.1.33",
     "react-router-dom": "^4.2.2",
     "react-window-resize-listener": "^1.1.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
