--- a/package.json
+++ b/package.json
@@ -15,32 +15,33 @@
     "url": "https://github.com/Learning-Fuze/react_starter.git"
   },
   "dependencies": {
+    "debug": "^4.1.1",
     "dependencies": "0.0.1",
     "npm": "^6.10.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
-    "react-responsive-carousel": "^3.1.33",
-    "react-router-dom": "^4.2.2",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-redux": "^5.1.1",
+    "react-responsive-carousel": "^3.1.49",
+    "react-router-dom": "^4.3.1",
     "react-window-resize-listener": "^1.1.0",
     "redux": "^3.7.2",
     "slick-carousel": "^1.8.1",
     "url-parse": "^1.4.7"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.5",
-    "eslint": "^4.5.0",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "file-loader": "^0.11.2",
-    "image-webpack-loader": "^3.3.1",
-    "postcss-loader": "^2.0.6",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "image-webpack-loader": "^3.6.0",
+    "postcss-loader": "^2.1.6",
+    "react-hot-loader": "^3.1.3",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.11.5"
   }
 }
